# yifu-weekly-miniproject

marco-polo-lambda/: Makefile  README.md
marco-polo-lambda/src/: main.rs
week1/: Cargo.toml
week1/src/: lib.rs  main.rs
week2/: Cargo.toml  README.md
week3/: Cargo.toml  Makefile  README.md
week3/src/: lib.rs  main.rs  parse.rs
week4/: README.md
week4/src/: main.rs
week5/: Cargo.toml  README.md
week5/src/: lib.rs  main.rs  roll.rs
week6/: Cargo.toml  README.md
week6/src/: main.rs
week7/: Cargo.toml  README.md
week7/src/: lib.rs  main.rs
week8/: Cargo.toml  README.md
week8/src/: main.rs
yifu-week1-demo-/src/: lib.rs
