[package]
name = "roll-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.4", features=["derive"]}
rand = "0.8.4"
rocket = { version = "0.4.4", default-features = false }
regex = "1"



