[package]
name = "week6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.24.2", features = ["full"] }
rand = "0.8.4"